assets/css/main.scss
/* ... */
@media (min-width: calc(2*$minWidth)) {
  #skipBackward5, #skipForward5 {
    display: block !important;
  }

  #layerSwitcher {
    display: block !important;
  }
}

#videoOuter[data-state="pause"] #playpause {
  background: url("/images/pause.svg") no-repeat center center;
  background-size: calc($videoBarHeight / 4);
}

#layerSwitcher, #videoOptions {
  > div {
    // visibility: visible !important; // toggle
    // opacity: 1 !important; // toggle

    opacity: 0;
    visibility: collapse;

    transition: opacity 0.2s ease-in-out, visibility 0.2s;
    transition-delay: 250ms;
  }

  &:not(.hidden):hover > div {
    visibility: visible;

    opacity: 1;
    transition-delay: 0ms;
    pointer-events: inherit;
  }
}

#videoOptions {
  button {
    background: url("/images/gear.svg") no-repeat center center;
    background-size: calc($videoBarHeight / 2.7);
  }

  #videoQuality {
    display: none;
  }

  > div {
    position: absolute;
    bottom: $videoBarHeight;
    bottom: calc($videoBarHeight + env(safe-area-inset-bottom));
    right: 0;
    background: rgba(0, 0, 0, 0.6);
    z-index: 1;

    color: #fff;

    padding: 2*$videoBarBtnMargin;
    padding-bottom: 0;

    border-top-left-radius: 0.5rem;

    .column {
      display: block;
      float: left;
    }

    .column:first-child {
      margin-right: 2rem;
    }
  }

  strong, a {
    display: block;
    height: 4*$videoBarBtnMargin;
    overflow-y: hidden;
  }

  $iconWidth: 1rem;
  $iconPadding: 0.3rem;
  strong {
    padding-left: $iconWidth + $iconPadding;
  }

  a {
    margin: 2*$videoBarBtnMargin 0;
    text-decoration: none;

    color: #fff;

    &:hover {
      @media (hover: hover) {
        color: $red;
      }
      text-decoration: none;
    }

    &::before {
      display: inline-block;
      width: $iconWidth;
      padding-right: $iconPadding;
      text-align: right;
      content: "X";
      color: transparent;
      line-height: 1.0rem;
      background-repeat: no-repeat;
      background-position: center center;
      background-size: 0.8rem;
    }

    &:hover::before {
      @media (hover: hover) {
        filter: $redColorFilter;
      }
    }

    &.next::before {
      background-image: url("/images/hourglass.svg");
      background-size: 0.6rem;
    }

    &.active::before {
      background-image: url("/images/checkmark.svg");
    }

    &.active.eye::before {
      background-image: url("/images/eye.svg");
      background-size: 0.8rem;
    }

    small {
      float: right;
      margin: 0.15rem 0;
      font-size: 0.75rem;
    }
  }
}

// highlight the gear icon while the menu is open
// the :not(.hidden) is needed to unhighlight on forced-close
#videoOptions:not(.hidden) {
  button:hover {
    filter: $redColorFilter;
  }
}

// if forced-close, remove the popup immediately
#videoOptions.hidden {
  > div {
    transition-delay: 0ms;
  }
}

.noMobile {
  display: none;
}


$sidebarBoxShadowNormal: 0.1em 0 0.3em 0.1em rgba(0,0,0,0.3);
#sidebar {
  width: $sidebarWidth;
  min-width: $minWidth;
  height: 100vh;
  height: 100dvh;
  position: relative;
  top: 0;
  left: max($minWidth, $mainWidth);
  background: $bgcolor;
  display: flex;
  flex-flow: column;
  z-index: 3;
  box-shadow: $sidebarBoxShadowNormal;
}

@media (min-width: calc(3*$minWidth)) {
  .noMobile {
    display: inline;
  }

  .showSidebar #sidebar {
    box-shadow: $sidebarBoxShadowNormal !important;
  }

  #sidebar {
    left: max($minWidth, $mainWidth);
    position: fixed;
    transition: none !important;
  }

  #switcher, body::before {
    display: none !important;
  }

  #videoRecordingDate {
    display: block;
  }
}

body::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  box-shadow: inset -3em 0 2em -2em rgba(0,0,0,0.7);
  pointer-events: none;
  z-index: 4;
  transition: all 0.3s ease;
  opacity: 1;
}

body.showSidebar::before {
  opacity: 0;
}

.showSidebar #sidebar {
  transition: all 0.3s ease;
  left: min(100vw - $minWidth, $mainWidth);
  box-shadow: 2em 0 2em 2em rgba(0,0,0,0.7);
}

.hideSidebar #sidebar {
  transition: all 0.3s ease;
}

#content {
  padding: $contentPad;
  padding-top: 0;
  min-width: $minWidth;
  box-sizing: border-box;
  width: 100%;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;

  -webkit-hyphens: auto;
  hyphens: auto;
  overscroll-behavior: contain;

  p, ul, ol {
    line-height: 1.15rem;
  }
}

@keyframes spinner {
  0% {
    transform: rotate(-180deg);
  }
  100% {
    transform: rotate(180deg);
  }
}

$cyclistSize: 8rem;
#videoPoster {
  width: 100%;
  height: 100%;

  &::after, &::before {
    transition-property: opacity;
    transition-duration: 0.5s;
    transition-timing-function: ease-in;
    opacity: 0;
    content: "";
    position: absolute;
  }

  &::before {
    background: url('/images/cyclist_outline.svg') 100% 100% / contain no-repeat;
    height: $cyclistSize;
    top:  calc(50% - $cyclistSize/2);
    left: calc(50% - $cyclistSize/2);
    width: $cyclistSize;
  }

  &::after {
    animation: 2.0s ease-in-out infinite spinner;
    animation-play-state: inherit;
    border: solid calc($cyclistSize/20) transparent;
    border-bottom-color: $red;
    border-radius: 50%;
    height: calc($cyclistSize/3.55);
    top: calc(50% - $cyclistSize/30.5);
    left: calc(50% - $cyclistSize/2.19);
    width: calc($cyclistSize/3.55);
  }

  &.loading {
    &::after, &::before {
      transition-delay: 500ms;
      opacity: 1;
    }
  }
}

video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

body.fullscreen video, #videoOuter:fullscreen video {
  object-fit: contain;
}
/* ... */

